--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
     <head>
         <title>gridbot demo</title>
         <script src="gridbot.js"></script>
+        <style>
+            body {background: black; color: lightgreen; font-family: courier}
+            .panel {width: 400; height: 400; border: solid lightgreen 1px}
+        </style>
     </head>
 
     <body>
-        hello
+        <h1>quotes</h1>
+        <div id="quotes" class="panel"></div>
+        <h1>trades</h1>
+        <div id="trades" class="panel"></div>
+        <h1>bars</h1>
+        <div id="bars" class="panel"></div>
     </body>
 </html>
